# markets

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  README.md  makefile  pyproject.toml  sandbox.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/: ci-cd.yml
.github/workflows/: build_deploy.yaml  ci-cd.yml  code-quality.yml  code_quality.yaml  destroy.yaml  test.yaml
data/: BTC-USD_2024-05-26.csv
prototyping/: app.ipynb  deployment_tests.ipynb  inspecting_data.ipynb  secrets_manager.ipynb
src/: app.py  core.py
src/infrastructure/: TF_README.md  main.tf
src/infrastructure/backend/: .terraform.lock.hcl  TF_README.md  main.tf
src/markets/: app.py  core.py
tests/: conftest.py  test_app_integration.py  test_app_unit.py  test_deployment.py  test_existance.sh
utils/: create_gmail_secret.py  create_gmail_secrets.py  echo_project.sh  project_to_text.py  remove_ignored.py  ttt.ipynb
